[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/nokiafc22.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Goal.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=5]
action = "run"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[node name="Goal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.258824, 0.321569, 0.541176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 1 )
text = "Termin√© !"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 384.0
margin_top = -240.0
margin_right = -580.0
margin_bottom = -200.0
custom_fonts/font = SubResource( 2 )
text = "Temps :"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeValue" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 736.0
margin_top = -240.0
margin_right = -388.0
margin_bottom = -200.0
custom_fonts/font = SubResource( 2 )
text = "999.999"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 384.0
margin_top = -176.0
margin_right = -580.0
margin_bottom = -136.0
custom_fonts/font = SubResource( 2 )
text = "Meilleur temps :"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreValue" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 736.0
margin_top = -176.0
margin_right = -388.0
margin_bottom = -136.0
custom_fonts/font = SubResource( 2 )
text = "999.999"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewHighScore" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.0
margin_top = 252.0
margin_right = 170.0
margin_bottom = 292.0
custom_fonts/font = SubResource( 2 )
text = "Nouveau record !"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -282.0
margin_top = -171.0
margin_right = 282.0
margin_bottom = -85.0
custom_styles/focus = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
shortcut = SubResource( 6 )
text = "Recommencer"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = -43.0
margin_right = 138.0
margin_bottom = 43.0
custom_styles/focus = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
text = "Retour"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
